--- a/css/css-grid/index.html
+++ b/css/css-grid/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    Hello
+    <header>
+        <a href="#" id="logo">ImportantCo</a>
+
+        <nav>
+            <ul>
+                <li><a href ="#">Home</a></li>
+                <li><a href ="#">Services</a></li>
+                <li><a href ="#">About</a></li>
+                <li><a href ="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
