--- a/javascript/d3sandbox/market_profile.html
+++ b/javascript/d3sandbox/market_profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<script src="https://d3js.org/d3.v4.min.js"></script>	
+<script src="https://unpkg.com/d3@4.6.0"></script>	
 <script src="https://unpkg.com/d3fc@14.0.15"></script>
 <script src="https://unpkg.com/lodash@4.17.10"></script>
 <script src="https://unpkg.com/d3-scale-chromatic@1.3.3"></script>
